WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269944
[UnifedPDF] List boxes don't update after choosing an option
https://bugs.webkit.org/show_bug.cgi?id=269944
Summary
[UnifedPDF] List boxes don't update after choosing an option
Simon Fraser (smfr)
Reported
2024-02-22 14:00:46 PST
In a PDF with a list box, click on the List Box, and choose another option (say Option C). Note that the list box doesn’t visually update until something forces it, like a window resize.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-02-22 14:00:57 PST
<
rdar://123461005
>
Simon Fraser (smfr)
Comment 2
2024-02-22 14:02:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24974
EWS
Comment 3
2024-02-22 15:58:23 PST
Committed
275207@main
(fb33b40b703b): <
https://commits.webkit.org/275207@main
> Reviewed commits have been landed. Closing PR #24974 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug