[UnifedPDF] List boxes don't update after choosing an option https://bugs.webkit.org/show_bug.cgi?id=269944 rdar://123461005

Reviewed by Sammy Gill.

We need to trigger repaints of the PDF content for "choice widget" type annotations.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::repaintRequirementsForAnnotation):

Canonical link: https://commits.webkit.org/275207@main